fixed overflow issues on homepage
Former-commit-id: 404a55f39464863a87df85d6952fd3b578b9bd0c

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -25,6 +25,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    overflow-y: hidden;
 }
 
 .hero h1 {
@@ -87,6 +88,7 @@
     width: 100%;
     height: 100vh;
     background: var(--color-secondary);
+    overflow-y: hidden;
 }
 
 .project h2 {
@@ -138,6 +140,7 @@
     width: 100%;
     background: var(--color-bg);
     transition: 2s ease;
+    overflow-y: hidden;
 }
 
 .color-d {
@@ -153,4 +156,5 @@
 .explore {
     height: 100vh;
     background: yellow;
+    overflow-y: hidden;
 }
